# fridge2table

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  fridge2table.db  fridgetomealapp.py  init  init.ps1  pyproject.toml  requirements.txt  samplefridgetomeal.html  samplemealfinderapp.py
fridge2table/: __init__.py  __main__.py  db.py  display_input.py  fridge2table.html  populated_db.db  scraping.py  script.js  static.js  styles.css  templates  types.py  utils.py
fridge2table/db_log/: event_log.txt
fridge2table/resources/: cached_recipes.json
fridge2table/static/: fridge2table.css  fridge2table.html  fridge2table.js  index.html  index.js  script.js  style.css
fridge2table/templates/: fridge2table.html  script.js  script2.js
prototypes/database_prototype/dbPrototype/: db_proto.py  db_proto_test.py  event_log.txt  protoDB.db  recipes.txt
prototypes/fridgetomeal/: samplefridgetomeal.html  samplemealfinderapp.py
prototypes/fridgetomeal/dbPrototype/: DbProto.py  db_proto_test.py  protoDB.db
prototypes/scraper/: requirements.txt  scraper.py
prototypes/scraper/scrapy/epicurious/epicurious/: items.py  middlewares.py  pipelines.py  settings.py
prototypes/scraper/scrapy/epicurious/epicurious/csv_files/: epicurious_recipe_urls copy.csv  epicurious_recipe_urls.csv
prototypes/scraper/scrapy/epicurious/epicurious/spiders/: epicuripous_spider.py
scripts/: populate_db.py
