[project]
name = "fridge2table"
version = "1.0.0"
authors = [
	{ name="Nwamaka Black", email="blacknnwa@gmail.com" },
	{ name="Paul Fitch", email="plftch9@gmail.com" },
	{ name="Joseph Lustri", email="jlustri@gmail.com" },
]
description = "A web app that recommends recipes from the web based on what's in your pantry."
dependencies = [
	"beautifulsoup4",
	"flask",
	"recipe_scrapers",
	"requests",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
